2013-11-13  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - Fixes for unimplemented FreeBSD output:
	    - show_shared_mem_bsd()
	    - show_semaphores_bsd()
	    - show_msg_queues_bsd()
	* src/tests/check_all_args.in:
	  - Use mktemp(1) instead of Debian/Ubuntu-specific tempfile(1).
	  - Remove rogue xmlwf call in '--format=text' test.
	  - Fix for the unhelpful xmlwf: unlike every other Unix utility, xmlwf
	    returns 0, even on failure (!) so we have to check if output is
	    produced...

2013-11-07  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: get_arch(): Added PPC64.

2013-11-01  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1:
	  - NOTES: Escape dash in indent-char.
	  - EXAMPLES: Fixed display of indent-char value.
	* src/procenv.c: get_arch(): Added missing "SuperH".

2013-10-30  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_signals(): Check return from get_signal_name() in case a
	    platform doesn't provide the signal in question.
	  - get_kernel_bits(): Return error value rather than calling die().
	  - show_bsd_mounts(): Removed unused variables.
	  - Added a few extra asserts to ensure section_open() is passed a valid
	    name.
	* src/procenv.h: Need to define 'semun' on Hurd too.

2013-10-25  James Hunt  <james.hunt@ubuntu.com>

	* TODO: Stuff.
	* src/procenv.c: get_arch(): Fix for AARCH64 which seemingly isn't
	  considered to be "ARM" by gcc.

2013-10-15  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1:
	  - Fix for lintian bug: spelling-error-in-binary.
	* src/procenv.c:
	  - Fixes for lintian bugs: spelling-error-in-manpage,
	    hyphen-used-as-minus-sign.

2013-10-14  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Add '--debug' option.
	* man/procenv.1:
	  - General tidy-up.
	  - OPTIONS: Added '--crumb-separator'.
	  - EXAMPLES: Added a few more.
	  - LIMITATIONS: Updated.
	* src/pr_list.c: Undo erroneous "fix" to pr_list_append() and
	  pr_list_prepend().
	* src/procenv.c: